Make sure that Fill Tool doesn't merge all the frames

When merging the labeled layers, the fill tool used to do the full
normal merge with all the animation frames (which were later unused
during the fill itself). This patch adds a flag that disables merging
of frames.

BUG:438607